--- a/parcial1/practica5.html
+++ b/parcial1/practica5.html
@@ -1,5 +1,6 @@
 <html lang="es"> 
     <head></head>
+    <title>Práctica 5- HTML</title>
 <body style="font-family: 'Times New Roman'">
     <h1>Curriculum Vitae de Bruce Wayne</h1>
     <h2>Datos personales</h2>
