--- a/parcial1/reto1.html
+++ b/parcial1/reto1.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+    <title>Reto 1- HTML</title>
+</head>
 <body>
     <h1>Christian Alfredo Morales Meza</h1>
     <h2>Mis materias UPSLP</h2>
