--- a/parcial2/practica15/revistas.html
+++ b/parcial2/practica15/revistas.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
+  <title>Revistas</title>
   <link href="revistas.css" rel="stylesheet">  
 </head>
 
