--- a/parcial3/11-geolocalizacion.html
+++ b/parcial3/11-geolocalizacion.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>API Geolocalización</title>
+  </head>
 <body>
 <h1>HTML Geolocation</h1>
 <p>Click the button to get your coordinates.</p>
