--- a/parcial3/15-plotly.html
+++ b/parcial3/15-plotly.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Plotly Función Cuadrática</title>
+    </head>
 
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
