--- a/parcial3/16-canvas.html
+++ b/parcial3/16-canvas.html
@@ -2,6 +2,11 @@
 
 <html>
 
+<head>
+    <meta charset="UTF-8">
+    <title>Canvas</title>
+</head>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 
 <body>
@@ -38,7 +43,7 @@ new Chart("myChart", { //esta funcion es diferente de ploty en chart si necesita
     legend: {display: false},
     title: {
     display: true,
-    text: "World Wine Production 2018"
+    text: "Predicción Calificaciones"
   }
  }
 }); 
