--- a/parcial3/17-reto1.html
+++ b/parcial3/17-reto1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1, initial-scale=1.0">
-    <title>Ejercicio 17 Reto 1</title>
+    <title>Ejercicio Reto 1</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
