--- a/parcial3/2-parrafos.html
+++ b/parcial3/2-parrafos.html
@@ -2,7 +2,7 @@
 
 <head>
 
-  <title>Bienvenida del usuario</title>
+  <title>Generador de párrafos</title>
   <style>
     p{
       color: rgb(12, 138, 12);
