--- a/parcial3/3-tabla.html
+++ b/parcial3/3-tabla.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Bienvenida del usuario</title>
+  <title>Generador de tabla </title>
   <style>
     p{
       color: rgb(12, 138, 12);
