--- a/parcial3/7-usuario.html
+++ b/parcial3/7-usuario.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <title>Bienvenida del usuario</title>
+  <meta charset="UTF-8">
+  <title>Validar Usuario y Contraseña</title>
   <style>
     p{
       color: green;
@@ -13,11 +14,11 @@
     
     if(usuario=="admin" && contra=="admin"){
       document.write("Acceso Permitido");
-      document.write("<a href='https://alfredomoralesm.github.io'><br>Portafolio</a>");         
+      document.write("<a href='https://alfredomoralesm.github.io/PortafolioWeb'><br>Portafolio</a>");         
     }
     else{
         document.write("Acceso denegado"); 
-        document.write("<a href='ejercicio3c.html'><br>Regresar a validar</a>");
+        document.write("<a href='7-usuario.html'><br>Regresar a validar</a>");
     }
 
 
