--- a/parcial3/8-convertidorgrados.html
+++ b/parcial3/8-convertidorgrados.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <title>Bienvenida del usuario</title>
+  <meta charset="UTF-8">
+  <title>Convertidor de temperaturas</title>
   <style>
     p{
       color: green;
