--- a/parcial1/practica1.html
+++ b/parcial1/practica1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>El título de la página</title>
+<title>Práctica 1- HTML</title>
 </head>
 <body>
     <h1>HTML</h1>
