--- a/parcial1/practica2.html
+++ b/parcial1/practica2.html
@@ -1,4 +1,5 @@
 <html lang="es"> 
+    <title>Práctica 2-HTML</title>
     <head></head>
     <body style="font-family:'Times New Roman'"> 
         <h1>Tim Berners-Lee</h1>
