--- a/parcial1/practica6.html
+++ b/parcial1/practica6.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>Práctica 6- HTML</title>
+    </head>
     <body style="font-family: 'Times New Roman'">
         <h1>Los tres pilares de la Web</h1>
         <a href= http://es.wikipedia.org/wiki/Tim_Berners-Lee>Tim Berners-Lee</a> es considerado el padre de la Web porque desarrolló los tres elementos básicos para el funcionamiento de la 
