--- a/parcial2/practica16/transformacion1.html
+++ b/parcial2/practica16/transformacion1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8" />
+    <title>Transformación 1</title>
 <style>
     div {
     margin: 150px;
