--- a/parcial2/practica9/index.html
+++ b/parcial2/practica9/index.html
@@ -39,35 +39,35 @@
   <h1>Barrios de San Luis Potosí</h1>
 
   <div class="gallery">
-    <a target="_blank" href="montecillo.html">
+    <a  href="montecillo.html">
       <img src="imagenesbarrios/montecillo.jpg" alt="Barrio Montecillo" width="600" height="400">
     </a>
     <div class="desc">Barrio Montecillo</div>
   </div>
 
   <div class="gallery">
-    <a target="_blank" href="sanjuan.html">
+    <a href="sanjuan.html">
       <img src="imagenesbarrios/sanjuandeguada.jpg" alt="Barrio San Juan de Guadalupe" width="600" height="400">
     </a>
     <div class="desc">Barrio San Juan de Guadalupe</div>
   </div>
 
   <div class="gallery">
-    <a target="_blank" href="sanmiguelito.html">
+    <a  href="sanmiguelito.html">
       <img src="imagenesbarrios/sanmiguelito.jpg" alt="Barrio de San Miguelito" width="600" height="400">
     </a>
     <div class="desc">Barrio de San Miguelito</div>
   </div>
 
   <div class="gallery">
-    <a target="_blank" href="sansebastian.html">
+    <a  href="sansebastian.html">
       <img src="imagenesbarrios/sansebastian.jpg" alt="Barrio de San Sebastián" width="600" height="400">
     </a>
     <div class="desc">Barrio de San Sebastián</div>
   </div>
 
   <div class="gallery">
-      <a target="_blank" href="santiago.html">
+      <a href="santiago.html">
         <img src="imagenesbarrios/santiago.jpg" alt="Barrio de Santiago" width="600" height="400">
       </a>
       <div class="desc">Barrio de Santiago</div>
@@ -75,14 +75,14 @@
 
 
   <div class="gallery">
-      <a target="_blank" href="tequisquiapan.html">
+      <a  href="tequisquiapan.html">
         <img src="imagenesbarrios/tequisquiapan.jpg" alt="Barrio de Tequisquiapan" width="600" height="400">
       </a>
       <div class="desc">Barrio de Tequisquiapan</div>
   </div>
 
   <div class="gallery">
-      <a target="_blank" href="tlaxcala.html">
+      <a  href="tlaxcala.html">
         <img src="imagenesbarrios/tlaxcala.jpg" alt="Barrio de Tlaxcala" width="600" height="400">
       </a>
       <div class="desc">Barrio de Tlaxcala</div>
