--- a/parcial2/practica9/sanjuan.html
+++ b/parcial2/practica9/sanjuan.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="sietebarrios.html"><img src="imagenesbarrios/regresar.png" width="40px" height="40px"></href></a>
+    <a href="../practica9/index.html"><img src="imagenesbarrios/regresar.png" width="40px" height="40px"></href></a>
     <p class="boton"> Regresar</p>
 
     <h1>Barrio de San Juan de Guadalupe</h1>
