--- a/parcial2/practica9/tequisquiapan.html
+++ b/parcial2/practica9/tequisquiapan.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <a href="sietebarrios.html"><img src="imagenesbarrios/regresar.png" width="40px" height="40px"></href></a>
+    <a href="../practica9/index.html"><img src="imagenesbarrios/regresar.png" width="40px" height="40px"></href></a>
     <p class="boton"> Regresar</p>
     <h1>Barrio de Tequisquiapan</h1>
 
