--- a/parcial3/12-googlemaps.html
+++ b/parcial3/12-googlemaps.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <title>API Google Maps</title>
+    </head>
 <body>
 <h1>My First Google Map</h1>
 <div id="map" style="width:400px;height:400px;background:yellow"></div>
