--- a/parcial3/14-graficas.html
+++ b/parcial3/14-graficas.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 
 <html>
-
+<head>
+    <meta charset="UTF-8">
+    <title>Plotly Gráficas de Barras</title>
+</head>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 <body>
