--- a/parcial3/21-ejemplopdf.html
+++ b/parcial3/21-ejemplopdf.html
@@ -1,7 +1,7 @@
-<!doctype>
+
 <html>
 <head>
-	<title>jsPDF</title>
+	<title>Test Violencia PDF</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />	
 
