--- a/parcial3/23-piramide.html
+++ b/parcial3/23-piramide.html
@@ -12,7 +12,7 @@
 	<script type="text/javascript" src="jspdf.plugin.standard_fonts_metrics.js"></script>
 	<script type="text/javascript" src="jspdf.plugin.split_text_to_size.js"></script>
 	<script type="text/javascript" src="jspdf.plugin.from_html.js"></script>
-    <title>Document</title>
+    <title>Pirámide Reto 1</title>
 </head>
 
 <body>
