--- a/parcial3/6-tablaaleatorios.html
+++ b/parcial3/6-tablaaleatorios.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Bienvenida del usuario</title>
+  <title>Generador de tabla aleatorios</title>
   <style>
     p{
       color: green;
