--- a/parcial3/9-arreglos.html
+++ b/parcial3/9-arreglos.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 
 <html>
-
+    <head>
+        <meta charset="UTF-8">
+        <title>Arreglos</title>
+    </head>
     <body>
 
         <h1>Arreglos</h1>
